--- a/styles/main.css
+++ b/styles/main.css
@@ -1,12 +1,12 @@
 :root { 
-    --title-color: #322153;
     --primary-color: #34cb79;
+    --title-color: #322153;
 }
 
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
 html {
@@ -24,22 +24,15 @@ a {
 
 h1, h2, h3, h4, h5, h6 {
     color: var(--title-color);
-    
     font-family: Ubuntu, sans-serif;
-    
 }
 
 /* BOX MODEL 
 
 Modelo de caixa 
 Toda caixa tem
-largura, altura, espaçamentos, preenchimentos
-bordas, cor, fundo, maneira que é vista pelo html(display),
+width(largura), height(altura), margin(espaçamentos), padding(preenchimentos)
+border(bordas), color (cor), background(fundo), maneira que é vista pelo html(display),
 posicionamento, alinhamentos 
 
 */
-
-
-
-
-
