--- a/styles/create-point.css
+++ b/styles/create-point.css
@@ -24,7 +24,7 @@
 
 #page-create-point header a span {
     margin-right: 16px;
-    background-image: url('../icones/arrow-left.svg');
+    background-image: url('../icons/arrow-left.svg');
 
     display: flex;
 
