--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -10,7 +10,8 @@
 
     #page-home header a {
         position: absolute;
-        bottom: 48px;
+        bottom: 30px;
+
 
         left: 50%;
         transform: translateX(-50%);
@@ -18,6 +19,14 @@
 
     #page-home main {
         align-items: center;
+    }
+
+    #page-search-results .cards {
+        grid-template-columns: 1fr;
+    }
+
+    #page-search-results .cards img {
+        height: 250px;
     }
 }
 
